--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
-h1{
- color: brown;
+:root{
+ --primary-color: #eb1ccc;
+ --secondary-color: #95989a;
+ --text-color: #fff;
+ --text-secondary:#000;
+ --terciary-color: #5d5d5d;
+}
+*{
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+ font-family: 'Montserrat', sans-serif;
+}
+/*event and form*/
+#event-description{
+ background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(../img/hrz-5.jpg);
+ background-position: center;
+ background-size: cover;
+ height: 85vh;
 }
