--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
  --text-color: #fff;
  --text-secondary:#000;
  --terciary-color: #5d5d5d;
+
 }
 *{
  margin: 0;
@@ -13,8 +14,16 @@
 }
 /*event and form*/
 #event-description{
- background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(../img/hrz-5.jpg);
+ background: linear-gradient(rgba(168, 168, 168, 0.3), rgba(168, 168, 168, 0.3)), url(../img/hrz-5.jpg);
  background-position: center;
  background-size: cover;
  height: 85vh;
+ display: flex;
+ justify-content: space-around;
+ align-items:center;
+ color:var(--text-color);
+}
+#disclaimer h2,
+#disclaimer .event-date{
+ color:var(--primary-color);
 }
