--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 }
 /*event and form*/
 #event-description{
- background: linear-gradient(rgba(168, 168, 168, 0.3), rgba(168, 168, 168, 0.3)), url(../img/hrz-5.jpg);
+ background: linear-gradient(rgba(46, 46, 46, 0.7), rgba(46, 46, 46, 0.7)), url(../img/hrz-5.jpg);
  background-position: center;
  background-size: cover;
  height: 85vh;
@@ -26,4 +26,37 @@
 #disclaimer h2,
 #disclaimer .event-date{
  color:var(--primary-color);
+}
+#disclaimer h2{
+ font-size: 3rem;
+ margin-bottom: 1rem;
+}
+#disclaimer .about-event{
+ font-size: 2em;
+text-transform: uppercase;
+max-width: 350px;
+font-weight: bold;
+margin-bottom: 1em;
+} 
+#disclaimer p{
+ font-size: 1.2em;
+ margin-bottom: .3em;
+}
+#disclaimer .event-date{
+ font-weight: bold;
+}
+#form{
+ background-color: var(--secondary-color);
+ padding: 2em;
+ max-width: 22%;
+}
+#form p{
+ font-size: 1.5em;
+ color: var(--text-secondary);
+ margin-bottom: 1em;
+}
+.form-group{
+ display: flex;
+ flex-direction: column;
+ margin-bottom: .8em;
 }
