--- a/css/styles.css
+++ b/css/styles.css
@@ -1,62 +1,144 @@
-:root{
- --primary-color: #eb1ccc;
- --secondary-color: #95989a;
- --text-color: #fff;
- --text-secondary:#000;
- --terciary-color: #5d5d5d;
-
+:root {
+  --primary-color: #eb1ccc;
+  --secondary-color: #95989a;
+  --text-color: #fff;
+  --text-secondary: #000;
+  --tertiary-color: #5d5d5d;
 }
-*{
- margin: 0;
- padding: 0;
- box-sizing: border-box;
- font-family: 'Montserrat', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+body{
+ padding-bottom: 500px;
 }
 /*event and form*/
-#event-description{
- background: linear-gradient(rgba(46, 46, 46, 0.7), rgba(46, 46, 46, 0.7)), url(../img/hrz-5.jpg);
- background-position: center;
- background-size: cover;
- height: 85vh;
- display: flex;
- justify-content: space-around;
- align-items:center;
- color:var(--text-color);
+#event-description {
+  background: linear-gradient(rgba(46, 46, 46, 0.7), rgba(46, 46, 46, 0.7)),
+    url(../img/hrz-5.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 85vh;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  color: var(--text-color);
 }
 #disclaimer h2,
-#disclaimer .event-date{
- color:var(--primary-color);
+#disclaimer .event-date {
+  color: var(--primary-color);
 }
-#disclaimer h2{
- font-size: 3rem;
- margin-bottom: 1rem;
+#disclaimer h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
 }
-#disclaimer .about-event{
- font-size: 2em;
-text-transform: uppercase;
-max-width: 350px;
-font-weight: bold;
-margin-bottom: 1em;
-} 
-#disclaimer p{
- font-size: 1.2em;
- margin-bottom: .3em;
+#disclaimer .about-event {
+  font-size: 2em;
+  text-transform: uppercase;
+  max-width: 350px;
+  font-weight: bold;
+  margin-bottom: 1em;
 }
-#disclaimer .event-date{
- font-weight: bold;
+#disclaimer p {
+  font-size: 1.2em;
+  margin-bottom: 0.3em;
 }
-#form{
+#disclaimer .event-date {
+  font-weight: bold;
+}
+#form {
+  background-color: var(--secondary-color);
+  padding: 2em;
+  max-width: 22%;
+}
+#form p {
+  font-size: 1.5em;
+  color: var(--text-secondary);
+  margin-bottom: 1em;
+}
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.8em;
+}
+
+.form-group label {
+  color: var(--tertiary-color);
+  margin-bottom: 0.3em;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group select {
+  padding: 6px 8px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+}
+.btn {
+  background-color: var(--primary-color);
+  color: var(--text-color);
+  text-transform: uppercase;
+  width: 100%;
+  border: none;
+  padding: 12px;
+  cursor: pointer;
+  border-radius: 5px;
+  opacity: 0.8;
+  font-size: 1.2em;
+  font-weight: 400;
+  margin: auto;
+  transition: all 0.3s ease-in-out;
+  text-shadow: #00000048 0px 0px 5px;
+  box-shadow: 0px 0px 5px #00000048;
+}
+
+.btn:hover {
+  background-color: var(--primary-color);
+  color: rgb(255, 255, 255);
+  opacity: 1;
+  font-weight: 500;
+  text-shadow: #00000048 0px 0px 5px;
+}
+
+.privacy {
+  margin-top: 10px;
+  font-weight: 300;
+}
+
+#key-benefits h2{
  background-color: var(--secondary-color);
+ text-align: center ;
  padding: 2em;
- max-width: 22%;
+ font-weight: 500;
 }
-#form p{
- font-size: 1.5em;
- color: var(--text-secondary);
- margin-bottom: 1em;
+
+.benefits{
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  padding: 4em;
+  margin: 0 auto;
 }
-.form-group{
+
+.benefit{
+ text-align: center;
  display: flex;
  flex-direction: column;
- margin-bottom: .8em;
+ align-items: center;
+ max-width: 20%;
+ color: var(--tertiari-color) ;
+
+}
+
+.benefit .benefit-img{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 1em;
+  background-color: gray;
 }
