--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,18 @@
   --text-secondary: #000;
   --tertiary-color: #5d5d5d;
 }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
-body{
- padding-bottom: 500px;
+
+body {
+  padding-bottom: 500px;
 }
+
 /*event and form*/
 #event-description {
   background: linear-gradient(rgba(46, 46, 46, 0.7), rgba(46, 46, 46, 0.7)),
@@ -22,18 +25,21 @@ body{
   background-size: cover;
   height: 85vh;
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   align-items: center;
   color: var(--text-color);
 }
+
 #disclaimer h2,
 #disclaimer .event-date {
   color: var(--primary-color);
 }
+
 #disclaimer h2 {
   font-size: 3rem;
   margin-bottom: 1rem;
 }
+
 #disclaimer .about-event {
   font-size: 2em;
   text-transform: uppercase;
@@ -41,23 +47,28 @@ body{
   font-weight: bold;
   margin-bottom: 1em;
 }
+
 #disclaimer p {
   font-size: 1.2em;
   margin-bottom: 0.3em;
 }
+
 #disclaimer .event-date {
   font-weight: bold;
 }
+
 #form {
   background-color: var(--secondary-color);
   padding: 2em;
   max-width: 22%;
 }
+
 #form p {
   font-size: 1.5em;
   color: var(--text-secondary);
   margin-bottom: 1em;
 }
+
 .form-group {
   display: flex;
   flex-direction: column;
@@ -77,6 +88,7 @@ body{
   border: none;
   outline: none;
 }
+
 .btn {
   background-color: var(--primary-color);
   color: var(--text-color);
@@ -108,14 +120,14 @@ body{
   font-weight: 300;
 }
 
-#key-benefits h2{
- background-color: var(--secondary-color);
- text-align: center ;
- padding: 2em;
- font-weight: 500;
+#key-benefits h2 {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 2em;
+  font-weight: 500;
 }
 
-.benefits{
+.benefits {
   display: flex;
   justify-content: space-around;
   width: 80%;
@@ -123,102 +135,127 @@ body{
   margin: 0 auto;
 }
 
-.benefit{
- text-align: center;
- display: flex;
- flex-direction: column;
- align-items: center;
- max-width: 20%;
- color: var(--tertiary-color) ;
+.benefit {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 20%;
+  color: var(--tertiary-color);
 
 }
 
-.benefit .benefit-img{
+.benefit .benefit-img {
   width: 250px;
   height: 250px;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
-  
+
 }
-#benefit1{
+
+#benefit1 {
   background-image: url(../img/sqr-1.jpg);
 }
-#benefit2{
+
+#benefit2 {
   background-image: url(../img/sqr-2.jpg);
 }
-#benefit3{
+
+#benefit3 {
   background-image: url(../iMG/sqr-3.jpg);
 }
-#location{
- height: 400px;
+
+#location {
+  height: 400px;
   background: linear-gradient(rgba(46, 46, 46, 0.7), rgba(46, 46, 46, 0.7)),
     url(../img/hrz-1.jpg);
   background-position: center;
   background-size: cover;
   display: flex;
-  align-items: center ;
+  align-items: center;
   justify-content: space-around;
   color: var(--text-color);
   margin-bottom: 3em;
 }
-#address, #about-location{
+
+#address,
+#about-location {
   max-width: 40%;
   font-size: 1.5em;
-  
-}
-#address{
- display: flex;
-  
-}
-#address i{
- color: var(--primary-color);
- font-size: 4em;
- margin-right: 0.5em;
+
 }
 
-#address-details{
- text-align: center ;
- font-size: 1.3em;
+#address {
+  display: flex;
+
 }
-#about-location h3{
- color: var(--primary-color);
- font-size: 2.5em;
- margin-bottom: 0.5em;
- text-transform: uppercase;
+
+#address i {
+  color: var(--primary-color);
+  font-size: 4em;
+  margin-right: 0.5em;
 }
-#about-location p{
+
+#address-details {
+  text-align: center;
+  font-size: 1.3em;
+}
+
+#about-location h3 {
+  color: var(--primary-color);
+  font-size: 2.5em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+#about-location p {
   line-height: 1.5em;
 }
-#details{
-width: 80%;
- margin: 0 auto;
- padding: 4em;
+
+#details {
+  width: 80%;
+  margin: 0 auto;
+  padding: 4em;
 }
-.detail{
+
+.detail {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   gap: 5%;
-  margin-bottom:4em;
+  margin-bottom: 4em;
 }
-.detail img{
-  width:50%;
+
+.detail img {
+  width: 50%;
 }
-.detail h3{
+
+.detail h3 {
   margin-bottom: 1em;
   font-size: 2em;
   font-weight: 500;
 }
-#detail-1 h3{
-font-size: 3em;
-font-weight: 700;
+
+#detail-1 h3 {
+  font-size: 3em;
+  font-weight: 700;
 }
-.detail-description{
+
+.detail-description {
   width: 100%;
   padding-left: 2em;
 }
 
-.detail-description ul{
-  list-style-position:inside ;
+.detail-description ul {
+  list-style-position: inside;
+}
+
+.detail-description ul li {
+  margin-bottom: 0.4em;
+}
+
+.detail-description ul li:last-child {
+  font-weight: bold;
+
 }
