--- a/css/styles.css
+++ b/css/styles.css
@@ -259,3 +259,30 @@ body {
   font-weight: bold;
 
 }
+
+.cta {
+  height: 400px;
+  background: linear-gradient(rgba(46, 46, 46, 0.7), rgba(46, 46, 46, 0.7)),
+    url(../img/hrz-1.jpg);
+  background-position: center;
+  background-size: cover;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--text-color);
+}
+
+.cta h3 {
+  margin-bottom: 1.2em;
+  font-size: 2em;
+  font-weight: 500;
+
+}
+
+.cta .btn {
+  width: 30%;
+  margin: 0 auto;
+  font-weight: 600;
+  font-size: 1.2em;
+}
