--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #eb1ccc;
+  --primary-color: #fa8238;
   --secondary-color: #95989a;
   --text-color: #fff;
   --text-secondary: #000;
